--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -15,6 +15,8 @@ cabal-version:      >=1.8
 
 build-type:         Simple
 
+extra-source-files: THANKS.md INSTALL.md CHANGELOG
+
 extra-source-files: src/C/lapack-aux.h
 
 library
