initial support for sparse matrix

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -48,6 +48,7 @@ library
                         Numeric.LinearAlgebra.Data
 
                         Numeric.LinearAlgebra.Compat
+                        Data.Packed.Internal.Sparse
                         
     other-modules:      Data.Packed.Internal,
                         Data.Packed.Internal.Common,
