--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -47,7 +47,7 @@ library
                         Numeric.LinearAlgebra.Devel
                         Numeric.LinearAlgebra.Data
 
-                        Numeric.LinearAlgebra.Compat
+    --                  Numeric.LinearAlgebra.Compat
                         
                         
     other-modules:      Data.Packed.Internal,
