initial support for static dimension checking

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -67,6 +67,7 @@ library
                         Numeric.LinearAlgebra.Random
                         Numeric.Conversion
                         Numeric.Sparse
+                        Numeric.LinearAlgebra.Util.Static
 
     C-sources:          src/C/lapack-aux.c
                         src/C/vector-aux.c
