--- a/packages/Makefile
+++ b/packages/Makefile
@@ -6,4 +6,7 @@ all:
 	    cd $$p; cabal install --force-reinstall --enable-documentation ; cd -; \
 	  fi; \
 	done
+	cd sparse; \
+	cabal install --extra-include-dirs=$(MKL) --extra-lib-dirs=$(MKL) \
+                  --force-reinstall --enable-documentation ; cd -;
 
