additional display functions

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -26,6 +26,7 @@ library
                         array,
                         deepseq,
                         random,
+                        split,
                         storable-complex,
                         vector >= 0.8
 
