withCompactSVD, static qr, mTm, unSym

--- a/packages/Makefile
+++ b/packages/Makefile
@@ -1,4 +1,4 @@
-pkgs=base gsl special glpk tests ../../hTensor
+pkgs=base gsl special glpk tests ../../hTensor ../../easyVision/packages/base
 
 all:
 	for p in $(pkgs); do \
@@ -9,4 +9,14 @@ all:
 	cd sparse; \
 	cabal install --extra-include-dirs=$(MKL) --extra-lib-dirs=$(MKL) \
                   --force-reinstall --enable-documentation ; cd -;
+
+fast:
+	for p in $(pkgs); do \
+	  if [ -e $$p ]; then \
+	    cd $$p; cabal install --force-reinstall ; cd -; \
+	  fi; \
+	done
+	cd sparse; \
+	cabal install --extra-include-dirs=$(MKL) --extra-lib-dirs=$(MKL) \
+                  --force-reinstall; cd -;
 
