--- a/packages/glpk/hmatrix-glpk.cabal
+++ b/packages/glpk/hmatrix-glpk.cabal
@@ -11,7 +11,7 @@ Description:
  Simple interface to linear programming functions provided by GLPK.
 
 Category:           Math
-tested-with:        GHC ==7.4
+tested-with:        GHC ==7.8
 
 cabal-version:      >=1.6
 build-type:         Simple
@@ -22,7 +22,7 @@ extra-source-files:     examples/simplex1.hs
                         examples/simplex4.hs
 
 library
-    Build-Depends:      base, hmatrix
+    Build-Depends:      base, hmatrix >= 0.16
 
     hs-source-dirs:     src
 
