to/from ByteString

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -27,6 +27,7 @@ library
                         deepseq,
                         random,
                         split,
+                        bytestring,
                         storable-complex,
                         vector >= 0.8
 
