--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.16.1.3
+Version:            0.17.0.0
 License:            BSD3
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -38,7 +38,7 @@ flag openblas
 
 library
 
-    Build-Depends:      base >= 4 && < 5,
+    Build-Depends:      base >= 4.8 && < 5,
                         binary,
                         array,
                         deepseq,
@@ -50,27 +50,19 @@ library
 
     hs-source-dirs:     src
 
-    exposed-modules:    Data.Packed,
-                        Data.Packed.Vector,
-                        Data.Packed.Matrix,
-                        Data.Packed.Foreign,
-                        Data.Packed.ST,
-                        Data.Packed.Development,
-
-                        Numeric.LinearAlgebra
-                        Numeric.LinearAlgebra.LAPACK
-                        Numeric.LinearAlgebra.Algorithms
-                        Numeric.Container
-                        Numeric.LinearAlgebra.Util
-
-                        Numeric.LinearAlgebra.Devel
+    exposed-modules:    Numeric.LinearAlgebra.Devel
                         Numeric.LinearAlgebra.Data
                         Numeric.LinearAlgebra.HMatrix
                         Numeric.LinearAlgebra.Static
-                        
+                        Numeric.LinearAlgebra.Util
 
-
-    other-modules:      Data.Packed.Internal,
+    other-modules:      Data.Packed,
+                        Data.Packed.Vector
+                        Data.Packed.Matrix
+                        Data.Packed.Foreign
+                        Data.Packed.ST
+                        Data.Packed.Development
+                        Data.Packed.Internal
                         Data.Packed.Internal.Common
                         Data.Packed.Internal.Signatures
                         Data.Packed.Internal.Vector
@@ -82,6 +74,10 @@ library
                         Numeric.Matrix
                         Data.Packed.Internal.Numeric
                         Data.Packed.Numeric
+                        Numeric.LinearAlgebra
+                        Numeric.LinearAlgebra.LAPACK
+                        Numeric.LinearAlgebra.Algorithms
+                        Numeric.Container
                         Numeric.LinearAlgebra.Util.Convolution
                         Numeric.LinearAlgebra.Util.CG
                         Numeric.LinearAlgebra.Random
