--- a/packages/glpk/hmatrix-glpk.cabal
+++ b/packages/glpk/hmatrix-glpk.cabal
@@ -22,7 +22,7 @@ extra-source-files:     examples/simplex1.hs
                         examples/simplex4.hs
 
 library
-    Build-Depends:      base <5, hmatrix >= 0.16
+    Build-Depends:      base <5, hmatrix >= 0.16, containers >= 0.5.4.0
 
     hs-source-dirs:     src
 
