--- a/packages/glpk/hmatrix-glpk.cabal
+++ b/packages/glpk/hmatrix-glpk.cabal
@@ -20,6 +20,7 @@ extra-source-files:     examples/simplex1.hs
                         examples/simplex2.hs
                         examples/simplex3.hs
                         examples/simplex4.hs
+                        examples/simplex5.hs
 
 library
     Build-Depends:      base <5, hmatrix >= 0.16, containers >= 0.5.4.0
