--- a/packages/glpk/hmatrix-glpk.cabal
+++ b/packages/glpk/hmatrix-glpk.cabal
@@ -23,7 +23,7 @@ extra-source-files:     examples/simplex1.hs
                         examples/simplex5.hs
 
 library
-    Build-Depends:      base <5, hmatrix >= 0.17
+    Build-Depends:      base <5, hmatrix >= 0.17, containers
 
     hs-source-dirs:     src
 
