Add a new module containing the GSL interpolation interface

--- a/packages/gsl/hmatrix-gsl.cabal
+++ b/packages/gsl/hmatrix-gsl.cabal
@@ -43,6 +43,7 @@ library
                         Numeric.GSL.ODE,
                         Numeric.GSL,
                         Numeric.GSL.LinearAlgebra,
+                        Numeric.GSL.Interpolation,
                         Graphics.Plot
     other-modules:      Numeric.GSL.Internal,
                         Numeric.GSL.Vector,
