--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -87,7 +87,12 @@ library
                         -fno-warn-missing-signatures
                         -fno-warn-orphans
 
-    cc-options:         -O4 -msse2 -Wall
+    cc-options:         -O4 -Wall
+
+    if arch(x86_64)
+        cc-options:     -msse2
+    if arch(i386)
+        cc-options:     -msse2
 
     cpp-options:        -DBINARY
 
