added experimental module for modular operation

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -75,6 +75,7 @@ library
                         Numeric.Sparse
                         Numeric.LinearAlgebra.Static.Internal
                         Numeric.LinearAlgebra.Util
+                        Numeric.LinearAlgebra.Util.Modular
 
     C-sources:          src/C/lapack-aux.c
                         src/C/vector-aux.c
