--- a/packages/tests/hmatrix-tests.cabal
+++ b/packages/tests/hmatrix-tests.cabal
@@ -26,7 +26,7 @@ flag gsl
 
 library
 
-    Build-Depends:      base >= 4 && < 5,
+    Build-Depends:      base >= 4 && < 5, deepseq,
                         QuickCheck >= 2, HUnit, random,
                         hmatrix >= 0.17
     if flag(gsl)
