--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -9,9 +9,9 @@ Homepage:           https://github.com/albertoruiz/hmatrix
 Synopsis:           Numeric Linear Algebra
 Description:        Linear systems, matrix decompositions, and other numerical computations based on BLAS and LAPACK.
                     .
-                    The standard interface is provided by the module "Numeric.LinearAlgebra".
+                    Standard interface: "Numeric.LinearAlgebra".
                     .
-                    A safer interface with statically checked dimensions is provided by "Numeric.LinearAlgebra.Static".
+                    Safer interface with statically checked dimensions: "Numeric.LinearAlgebra.Static".
                     .
                     Code examples: <http://dis.um.es/~alberto/hmatrix/hmatrix.html>
 
