--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -25,7 +25,7 @@ build-type:         Simple
 extra-source-files: THANKS.md CHANGELOG
 
 extra-source-files: src/Internal/C/lapack-aux.h
-                    src/Internal/C/windows_random_r.h
+                    src/C/windows_random_r.h
 
 flag openblas
     description:    Link with OpenBLAS (https://github.com/xianyi/OpenBLAS) optimized libraries.
@@ -75,10 +75,10 @@ library
                         Internal.Util
                         Internal.Modular
                         Internal.Static
-
+                        
     C-sources:          src/Internal/C/lapack-aux.c
                         src/Internal/C/vector-aux.c
-                        src/Internal/C/windows_random_r.c
+                        src/C/windows_random_r.c
 
 
     extensions:         ForeignFunctionInterface,
