Windows build with OpenBLAS
Currently OpenBLAS building on Windows is not working.

1. Under Windows actual name of the library is libopenblas.dll and not openblas.dll
2. There were duplication of external dependencies: blas and lapack. Because extra-libraries was declared twice - for openstack condition and for OS condition.
3. I'm not sure how OpenBLAS is built on other OSes, so someone have to check this change on other OSes.

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -96,13 +96,13 @@ library
 
     cpp-options:        -DBINARY
 
-    if flag(openblas)
-        extra-lib-dirs:     /usr/lib/openblas/lib
-        extra-libraries:    openblas
-    else
-        extra-libraries:    blas lapack
-
     if os(OSX)
+        if flag(openblas)
+            extra-lib-dirs:     /opt/local/lib/openblas/lib
+            extra-libraries:    openblas
+        else
+            extra-libraries:    blas lapack
+
         extra-lib-dirs: /opt/local/lib/
         include-dirs: /opt/local/include/
         extra-lib-dirs: /usr/local/lib/
@@ -112,14 +112,29 @@ library
         frameworks: Accelerate
 
     if os(freebsd)
+        if flag(openblas)
+            extra-lib-dirs:     /usr/local/lib/openblas/lib
+            extra-libraries:    openblas
+        else
+            extra-libraries:    blas lapack
+
        extra-lib-dirs: /usr/local/lib
        include-dirs: /usr/local/include
-       extra-libraries: blas lapack gfortran
+       extra-libraries: gfortran
 
     if os(windows)
-        extra-libraries: blas lapack
+        if flag(openblas)
+            extra-libraries:    libopenblas
+        else
+            extra-libraries:    blas lapack
 
     if os(linux)
+        if flag(openblas)
+            extra-lib-dirs:     /usr/lib/openblas/lib
+            extra-libraries:    openblas
+        else
+            extra-libraries:    blas lapack
+
         if arch(x86_64)
             cc-options: -fPIC
 
