--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -93,6 +93,8 @@ library
                         -fprof-auto
 
     cc-options:         -O4 -Wall
+    if flag(windowshack)
+      cc-options: -DWINDOWS_LINKER_HACK
 
     if arch(x86_64)
         cc-options:     -msse2
@@ -100,8 +102,6 @@ library
         cc-options:     -msse2
 
     cpp-options:        -DBINARY
-    if flag(windowshack)
-      cpp-options: -DWINDOWS_LINKER_HACK
 
     if os(OSX)
         if flag(openblas)
